# atmega328p-cxx-template

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  requirements.txt
.github/workflows/: build.yml  release.yml  tirage_and_dispatch.yml
app/: CMakeLists.txt  main.cpp
cmake/: CMakeFormat.cmake  ConanInstall.cmake  CppLinter.cmake  PythonVEnv.cmake  Utils.cmake
configure/: CMakeLists.txt
src/: CMakeLists.txt  blink.cpp
